--- a/DR-Rest-Project/DR-Rest/DR-Rest.csproj
+++ b/DR-Rest-Project/DR-Rest/DR-Rest.csproj
@@ -5,7 +5,12 @@
     <RootNamespace>DR_Rest</RootNamespace>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DocumentationFile>C:\Users\trium\Documents\GitHub\DR-RestAndJS\DR-Rest-Project\DR-Rest\DR-Rest.xml</DocumentationFile>
+  </PropertyGroup>
+
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="5.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.11" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
